--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.4",
     "@vercel/analytics": "^1.5.0",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "shadcn": "^2.3.0",
     "shadcn-ui": "^0.9.4",
+    "three": "^0.174.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
