--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "shadcn": "^2.3.0",
