--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite && yarn build:css",
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "optimize-images": "node scripts/simple-optimize.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -19,6 +20,7 @@
     "react-helmet-async": "^2.0.5",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
+    "rollup-plugin-visualizer": "^5.14.0",
     "shadcn": "^2.3.0",
     "shadcn-ui": "^0.9.4",
     "three": "^0.174.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "sharp": "^0.34.1",
     "tailwindcss": "^4.0.4",
     "vite": "^6.1.0"
   }
